add image upload for tracks and albums
